2006-07-05 Matej Urbas <matej.urbas@gmail.com>

	* Parser/VBNetVisitor.cs:
	* Parser/Resolver.cs: Updated to use ReturnType as BaseTypes in IClass
	  instances.

2006-07-03 Lluis Sanchez Gual  <lluis@novell.com> 

	* VBLanguageBinding.cs:
	* VBBindingCompilerServices.cs: Track changes in ProjectReference.
	  Removed obsolete GenerateMakefile method.
	* VBNetBinding.addin.xml: Updated versions.

2006-06-24 John Luke <john.luke@gmail.com>

	* Makefile.am: reference NRefactory not SharpRefactory.VB
	* SharpRefactoryVB: remove old VB parser
	* VBNetBinding.addin.xml: remove SharpRefactory.VB 
	* Parser/*.cs: port to NRefactory
	
2006-06-15 Lluis Sanchez Gual  <lluis@novell.com>

	* VBNetBinding.addin.xml: Use the DataType element instead fof Class
	  to declare serializable types.

2006-05-04 Lluis Sanchez Gual  <lluis@novell.com>

	* VBNetBinding.addin.xml: Updated versions.
	* VBNetBinding.mdp: Updated.

2006-04-21 Lluis Sanchez Gual <lluis@novell.com> 

	* VBLanguageBinding.cs: Implement GetSupportedClrVersions.

2006-04-07  David Makovský (Yakeen) <yakeen@sannyas-on.net>

	* VBNetBinding.addin.xml: renamed attribute in FileFilter Extension

2006-03-30 Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am:
	* VBNetBinding.addin.xml: Updated references.

2006-03-24 Lluis Sanchez Gual  <lluis@novell.com>   

	* VBNetBinding.mdp:
	* MonoQuery/MonoQuery.mdp: Updated.
	* Makefile.am:
	* SharpRefactoryVB/Makefile.am: Use an unified format. 
	  Patch by Matze Braun.
	
	* VBNetBinding.addin.xml: Updated add-in versions.

2006-03-17  Jacob Ilsø Christensen <jacobilsoe@gmail.com>

	* Parser/Parser.cs:
	* Parser/Resolver.cs:
	Removed unused MonodocResolver.

2006-03-12  David Makovský (Yakeen) <yakeen@sannyas-on.net>

        * VB.glade: Marking some strings not to be translated. Not include balast in pot file.
	
2006-01-30 Lluis Sanchez Gual  <lluis@novell.com>   

	* VBBindingCompilerServices.cs:
	* Parser/Resolver.cs:
	* Parser/Parser.cs: Track changes in parser api.
