@@ -87,6 +87,11 @@
                      class = "VBBinding.VBLanguageBinding" />
   </Extension>
   
+	<Extension path = "/SharpDevelop/Workbench/Ambiences">
+		<Class id    = "VBNet"
+		       class = "MonoDevelop.Core.VBAmbience"/>
+	</Extension>
+  
 	<Extension path = "/SharpDevelop/Workbench/SerializableClasses">
 		<DataType class = "VBBinding.VBCompilerParameters" />
 	</Extension>
